--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "Juan Jose Mayorga <devjuanjose@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "path": "^0.12.7",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-slick": "^0.28.0",
