--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.3",
     "react-slick": "^0.28.0",
+    "redux": "^4.0.5",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
